include/astral_rt.h

/**
 * Get Astral runtime version.
 * Thread-safety: Safe to call from any thread.
 *
 * @param major Output: major version (may be NULL)
 * @param minor Output: minor version (may be NULL)
 * @param patch Output: patch version (may be NULL)
 */
ASTRAL_API void ASTRAL_CALL astral_version(uint32_t* major, uint32_t* minor, uint32_t* patch);
// ============================================================================
// Common Types
// ============================================================================

/**
 * UTF-8 string span (immutable).
 * No NUL terminator assumed.
 *
 *  Explicit padding ensures consistent layout across 32-bit and 64-bit platforms.
 * On 64-bit: sizeof(ptr)=8, sizeof(uint32_t)=4, padding=4 → total=16 bytes
 * On 32-bit: sizeof(ptr)=4, sizeof(uint32_t)=4, padding=0 → total=8 bytes
 */
typedef struct AstralSpanU8 {
    const uint8_t* data;
    uint32_t len;
#if defined(__LP64__) || defined(_WIN64) || (defined(__SIZEOF_POINTER__) && __SIZEOF_POINTER__ == 8)
    uint32_t _padding;  // Explicit padding for 64-bit platforms
#endif
} AstralSpanU8;
/**
 * UTF-8 string span (mutable).
 * Used for output buffers.
 *
 *  Explicit padding ensures consistent layout across 32-bit and 64-bit platforms.
 */
typedef struct AstralMutSpanU8 {
    uint8_t* data;
    uint32_t len;
#if defined(__LP64__) || defined(_WIN64) || (defined(__SIZEOF_POINTER__) && __SIZEOF_POINTER__ == 8)
    uint32_t _padding;  // Explicit padding for 64-bit platforms
#endif
} AstralMutSpanU8;
/**
 * Opaque handle (model, session, embedder).
 *
 * v0.1 ABI hardening:
 * - Handles are 64-bit values encoding (type, slot index, generation).
 * - 0 is always invalid.
 */
typedef uint64_t AstralHandle;
// ---------------------------------------------------------------------------
// Tunables / Limits
// ---------------------------------------------------------------------------

// Maximum number of per-token logprob entries supported by the ABI.
// This keeps the meta side-channel fixed-size and allocation-free.
#define ASTRAL_LOGPROBS_MAX 16u
/**
 * Error codes.
 * All functions return AstralErr (0 = success).
 */
typedef int32_t AstralErr;
enum {
    ASTRAL_OK = 0,          /** Success */
    ASTRAL_E_INVALID = -1,  /** Invalid parameter (null pointer, bad config) */
    ASTRAL_E_NOMEM = -2,    /** Out of memory (reserve/commit failed) */
    ASTRAL_E_BUSY = -3,     /** Resource busy (queue full, retry) */
    ASTRAL_E_TIMEOUT = -4,  /** Operation timed out */
    ASTRAL_E_STATE = -5,    /** Invalid state (e.g., decode before feed) */
    ASTRAL_E_BACKEND = -6,  /** Backend error (llama.cpp failed) */
    ASTRAL_E_CANCELED = -7, /** Operation canceled */
    ASTRAL_E_UNSUPPORTED = -8, /** Operation unsupported */
};
// ============================================================================
// Allocator
// ============================================================================

/**
 * Allocator function: allocate `size` bytes with alignment `align`.
 * @param user User data (passed from AstralAllocator.user)
 * @param size Allocation size in bytes
 * @param align Alignment in bytes (power of 2)
 * @return Pointer to allocated memory, or NULL if out of memory
 */
typedef void* (*AstralAllocFn)(void* user, size_t size, size_t align);
/**
 * Free function: free memory allocated by AstralAllocFn.
 * @param user User data
 * @param ptr Pointer to free
 * @param size Size of allocation (for tracking)
 * @param align Alignment (for tracking)
 */
typedef void (*AstralFreeFn)(void* user, void* ptr, size_t size, size_t align);
/**
 * Custom allocator interface.
 * If alloc/free are NULL, Astral uses internal allocator.
 */
typedef struct AstralAllocator {
    AstralAllocFn alloc;  /** Allocation function */
    AstralFreeFn free;    /** Free function */
    void* user;           /** User data (passed to alloc/free) */
} AstralAllocator;
// ============================================================================
// Logging
// ============================================================================

/**
 * Log levels.
 */
enum {
    ASTRAL_LOG_ERROR = 0,
    ASTRAL_LOG_WARN = 1,
    ASTRAL_LOG_INFO = 2,
    ASTRAL_LOG_DEBUG = 3,
    ASTRAL_LOG_TRACE = 4,
};
/**
 * Logging callback.
 * WARNING: Must be non-blocking. Astral drops logs if callback is slow (>10ms).
 * @param user User data (passed from AstralInit.log_user)
 * @param level Log level (ASTRAL_LOG_*)
 * @param msg UTF-8 log message
 */
typedef void (*AstralLogFn)(void* user, int level, AstralSpanU8 msg);
// ============================================================================
// Initialization
// ============================================================================

/**
 * Initialization configuration.
 */
typedef struct AstralInit {
    AstralAllocator sys_alloc;   /** System allocator (optional; use internal if null) */
    AstralLogFn log_cb;          /** Logging callback (optional) */
    void* log_user;              /** User data for log callback */
#if !(defined(__LP64__) || defined(_WIN64) || (defined(__SIZEOF_POINTER__) && __SIZEOF_POINTER__ == 8))
    // Ensure `reserve_bytes` is 8-byte aligned on 32-bit ABIs.
    uint32_t _padding0;
#endif
    uint64_t reserve_bytes;      /** Virtual memory to reserve (e.g., 2GB = 2ULL << 30) */
    uint32_t thread_count;       /** Worker threads (0 = auto-detect) */
    uint32_t numa_node;          /** NUMA node to pin memory (0xFFFFFFFF = any) */
    uint8_t enable_hugepages;    /** Try huge pages (2MB/1GB) if available */
    uint8_t _padding1[7];        /** Reserved/padding (keeps layout stable) */
} AstralInit;
/**
 * Initialize Astral runtime.
 * Must be called once before any other Astral functions.
 * Thread-safety: Not thread-safe; call from main thread only.
 *
 * @param cfg Initialization configuration (must not be NULL)
 * @return ASTRAL_OK on success; ASTRAL_E_INVALID if cfg is NULL; error code on failure
 */
ASTRAL_API AstralErr ASTRAL_CALL astral_init(const AstralInit* cfg);
/**
 * Shutdown Astral runtime.
 * Drains work queues, joins worker threads, releases memory.
 * All handles must be released before calling this.
 * Thread-safety: Not thread-safe; call from main thread only.
 */
ASTRAL_API void ASTRAL_CALL astral_shutdown(void);
/**
 * Check if a handle is valid.
 * Returns 1 if valid, 0 if invalid/null.
 * Thread-safety: Safe to call from any thread.
 *
 * NOTE: A handle being "valid" only means it's non-null and the internal magic matches.
 * It does NOT guarantee the resource hasn't been freed (use-after-free detection is best-effort).
 *
 * @param handle Handle to validate
 * @return 1 if valid, 0 if invalid
 */
ASTRAL_API int ASTRAL_CALL astral_handle_valid(AstralHandle handle);
/**
 * Get human-readable error string for an error code.
 * Returns a static string (no need to free).
 * Thread-safety: Safe to call from any thread.
 *
 * @param err Error code (from any Astral function)
 * @return Static error message string (UTF-8, NUL-terminated)
 */
ASTRAL_API const char* ASTRAL_CALL astral_error_string(AstralErr err);
/**
 * Get last error context for the calling thread.
 *
 * Returns a pointer to a thread-local, NUL-terminated UTF-8 string.
 * The pointer remains valid until the next Astral call on the same thread.
 *
 * Thread-safety: Safe to call from any thread (thread-local storage).
 */
ASTRAL_API const char* ASTRAL_CALL astral_last_error(void);
/**
 * Clear last error context for the calling thread.
 * Thread-safety: Safe to call from any thread (thread-local storage).
 */
ASTRAL_API void ASTRAL_CALL astral_clear_last_error(void);
// ============================================================================
// Model
// ============================================================================

/**
 * Model configuration.
 */
typedef struct AstralModelDesc {
    AstralSpanU8 model_path;   /** Model identifier/path (UTF-8). May be empty for backends that don't load from file. */
    AstralSpanU8 backend_name; /** Optional backend override (e.g., "cpu", "mock"); empty = auto */
    uint32_t gpu_layers;       /** Number of layers to offload to GPU (0 = CPU only) */
    uint32_t n_ctx;            /** Context size (tokens) */
    uint32_t n_batch;          /** Batch size for prompt processing */
    uint32_t n_threads;        /** Threads for backend (0 = auto) */
    uint8_t embeddings_only;   /** Embeddings-only mode (1 = yes, 0 = no) */
#if defined(__LP64__) || defined(_WIN64) || (defined(__SIZEOF_POINTER__) && __SIZEOF_POINTER__ == 8)
    uint8_t _padding0[7];
#else
    uint8_t _padding0[3];
#endif
} AstralModelDesc;
/**
 * Model metadata.
 */
typedef struct AstralModelInfo {
    uint32_t vocab_size;   /** Vocabulary size (tokens) */
    uint32_t ctx_size;     /** Effective context size (tokens) */
    int32_t token_bos;     /** BOS token id (or <0 if none) */
    int32_t token_eos;     /** EOS token id (or <0 if none) */
} AstralModelInfo;
// ============================================================================
// Capabilities / Limits
// ============================================================================

typedef uint64_t AstralCaps;
enum {
    ASTRAL_CAP_NONE = 0,

    // Core features (provider-agnostic).
    ASTRAL_CAP_SAMPLER_EXT = 1ull << 0,   // Extended sampler controls via AstralSamplerDesc
    ASTRAL_CAP_STOP_SEQS   = 1ull << 1,   // Stop sequence support (tokenized; core-owned)

    // Optional features (provider-dependent).
    ASTRAL_CAP_EMBEDDINGS  = 1ull << 16,  // Embeddings API supported for this model
    ASTRAL_CAP_GPU_OFFLOAD = 1ull << 17,  // Build/provider supports GPU offload
    ASTRAL_CAP_LORA        = 1ull << 18,  // LoRA/adapters supported
    ASTRAL_CAP_GRAMMAR     = 1ull << 19,  // Grammar-constrained decoding supported
    ASTRAL_CAP_LOGPROBS    = 1ull << 20,  // Per-token metadata/logprobs supported
    ASTRAL_CAP_KV_STATE    = 1ull << 21,  // Session KV/state save/load supported
    ASTRAL_CAP_SLOTS       = 1ull << 22,  // Slot/sequence selection supported
    ASTRAL_CAP_GRAMMAR_GBNF = 1ull << 23, // GBNF grammar supported
    ASTRAL_CAP_GRAMMAR_JSON_SCHEMA = 1ull << 24, // JSON schema grammar supported
};
typedef struct AstralModelLimits {
    uint32_t vocab_size;
    uint32_t ctx_size;
    uint32_t max_batch;  // 0 if unknown/unreported
    uint32_t max_slots;  // 0 if not applicable
} AstralModelLimits;
/**
 * Get model metadata.
 * Thread-safety: Safe to call from multiple threads.
 */
ASTRAL_API AstralErr ASTRAL_CALL astral_model_info(AstralHandle model, AstralModelInfo* out_info);
/**
 * Load a GGUF model.
 * Thread-safety: Safe to call from multiple threads.
 *
 * @param desc Model configuration (must not be NULL)
 * @param out_model Output: model handle (must not be NULL; valid only if return is ASTRAL_OK)
 * @return ASTRAL_OK on success; ASTRAL_E_INVALID if desc/out_model is NULL; error code on failure
 */
ASTRAL_API AstralErr ASTRAL_CALL astral_model_load(const AstralModelDesc* desc, AstralHandle* out_model);
/**
 * Release a model.
 * Thread-safety: Not thread-safe; must not be in use by any session.
 *
 * @param model Model handle (from astral_model_load; must not be NULL)
 */
ASTRAL_API void ASTRAL_CALL astral_model_release(AstralHandle model);