plugins/unity/Runtime/AstralNative.cs

// AstralNative.cs - Low-level P/Invoke wrapper for Astral native library
// Do not use directly - use AstralSession instead.
//
//  All structs use StructLayout(LayoutKind.Sequential) for stable memory layout
//  All P/Invoke uses CallingConvention.Cdecl
//  UTF-8 strings via Span (pointer + length), never assume NUL termination

using System;
using System.Runtime.InteropServices;
using Unity.Collections;
using Unity.Collections.LowLevel.Unsafe;

namespace Astral.Runtime
{
    /// <summary>
    /// Low-level P/Invoke wrapper for Astral native library.
    /// Do not use directly - use AstralSession instead.
    /// Thread-safety: See individual function documentation.
    /// </summary>
    public static class AstralNative
    {
        // Platform-specific library names
#if UNITY_IOS && !UNITY_EDITOR
        private const string DllName = "__Internal";
#else
        private const string DllName = "astral_rt";
#endif

        // ====================================================================
        // Common Types
        // ====================================================================

        /// <summary>
        /// UTF-8 string span (immutable).
        /// No NUL terminator assumed.
        ///  Explicit padding for 64-bit platforms (16 bytes total).
        /// </summary>
        [StructLayout(LayoutKind.Sequential)]
        public struct AstralSpanU8
        {
            public IntPtr data;       // const uint8_t*
            public uint len;          // uint32_t
#if UNITY_64 || UNITY_EDITOR_64
            public uint _padding;     // Explicit padding for 64-bit
#endif

            /// <summary>
            /// Create span from NativeArray (UTF-8 encoded).
            /// </summary>
            public static unsafe AstralSpanU8 FromNativeArray(NativeArray<byte> arr)
            {
                return new AstralSpanU8
                {
                    data = (IntPtr)arr.GetUnsafeReadOnlyPtr(),
                    len = (uint)arr.Length
                };
            }

            /// <summary>
            /// Create span from managed string (allocates temporary UTF-8 array).
            /// WARNING: Caller must keep returned NativeArray alive until span is used.
            /// </summary>
            public static AstralSpanU8 FromString(string str, out NativeArray<byte> tempArray)
            {
                if (string.IsNullOrEmpty(str))
                {
                    tempArray = default;
                    return new AstralSpanU8 { data = IntPtr.Zero, len = 0 };
                }

                var utf8 = System.Text.Encoding.UTF8.GetBytes(str);
                tempArray = new NativeArray<byte>(utf8, Allocator.Temp);
                return FromNativeArray(tempArray);
            }
        }

        /// <summary>
        /// UTF-8 string span (mutable).
        /// Used for output buffers.
        ///  Explicit padding for 64-bit platforms (16 bytes total).
        /// </summary>
        [StructLayout(LayoutKind.Sequential)]
        public struct AstralMutSpanU8
        {
            public IntPtr data;       // uint8_t*
            public uint len;          // uint32_t
#if UNITY_64 || UNITY_EDITOR_64
            public uint _padding;     // Explicit padding for 64-bit
#endif

            /// <summary>
            /// Create mutable span from NativeArray.
            /// </summary>
            public static unsafe AstralMutSpanU8 FromNativeArray(NativeArray<byte> arr)
            {
                return new AstralMutSpanU8
                {
                    data = (IntPtr)arr.GetUnsafePtr(),
                    len = (uint)arr.Length
                };
            }
        }

        /// <summary>
        /// Opaque handle (model, session, embedder).
        /// Never dereference; only pass to Astral functions.
        /// </summary>
        [StructLayout(LayoutKind.Sequential)]
        public struct AstralHandle
        {
            public ulong value;

            public bool IsValid => value != 0;
            public static AstralHandle Invalid => new AstralHandle { value = 0 };
        }

        // ====================================================================
        // Error Codes
        // ====================================================================

        public const int ASTRAL_OK = 0;          // Success
        public const int ASTRAL_E_INVALID = -1;  // Invalid parameter
        public const int ASTRAL_E_NOMEM = -2;    // Out of memory
        public const int ASTRAL_E_BUSY = -3;     // Resource busy (queue full)
        public const int ASTRAL_E_TIMEOUT = -4;  // Operation timed out
        public const int ASTRAL_E_STATE = -5;    // Invalid state
        public const int ASTRAL_E_BACKEND = -6;  // Backend error
        public const int ASTRAL_E_CANCELED = -7; // Canceled
        public const int ASTRAL_E_UNSUPPORTED = -8; // Unsupported

        // ====================================================================
        // Tunables / Limits
        // ====================================================================

        public const int ASTRAL_LOGPROBS_MAX = 16;

        // ====================================================================
        // Allocator
        // ====================================================================

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate IntPtr AllocFn(IntPtr user, UIntPtr size, UIntPtr align);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void FreeFn(IntPtr user, IntPtr ptr, UIntPtr size, UIntPtr align);

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralAllocator
        {
            public IntPtr alloc;  // AllocFn
            public IntPtr free;   // FreeFn
            public IntPtr user;   // void* user data
        }

        // ====================================================================
        // Logging
        // ====================================================================

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void LogFn(IntPtr user, int level, AstralSpanU8 msg);

        public const int ASTRAL_LOG_ERROR = 0;
        public const int ASTRAL_LOG_WARN = 1;
        public const int ASTRAL_LOG_INFO = 2;
        public const int ASTRAL_LOG_DEBUG = 3;
        public const int ASTRAL_LOG_TRACE = 4;

        // ====================================================================
        // Initialization
        // ====================================================================

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralInit
        {
            public AstralAllocator sys_alloc;   // System allocator (optional)
            public IntPtr log_cb;               // LogFn callback
            public IntPtr log_user;             // User data for log callback
            public ulong reserve_bytes;         // Virtual memory to reserve
            public uint thread_count;           // Worker threads (0 = auto)
            public uint numa_node;              // NUMA node (0xFFFFFFFF = any)
            public byte enable_hugepages;       // Try huge pages
        }

        /// <summary>
        /// Initialize Astral runtime.
        /// Must be called once before any other Astral functions.
        /// Thread-safety: Not thread-safe; call from main thread only.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_init(ref AstralInit cfg);

        /// <summary>
        /// Shutdown Astral runtime.
        /// All handles must be released before calling this.
        /// Thread-safety: Not thread-safe; call from main thread only.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_shutdown();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_version(out uint major, out uint minor, out uint patch);

        /// <summary>
        /// Check if a handle is valid.
        /// Returns 1 if valid, 0 if invalid/null.
        /// Thread-safety: Safe to call from any thread.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_handle_valid(AstralHandle handle);

        /// <summary>
        /// Get human-readable error string for an error code.
        /// Returns a static string (no need to free).
        /// Thread-safety: Safe to call from any thread.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr astral_error_string(int err);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr astral_last_error();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_clear_last_error();

        // ====================================================================
        // Model
        // ====================================================================

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralModelDesc
        {
            public AstralSpanU8 model_path;  // Path to GGUF model file
            public AstralSpanU8 backend_name; // Optional override ("cpu", "mock", ...)
            public uint gpu_layers;          // Layers to offload to GPU
            public uint n_ctx;               // Context size (tokens)
            public uint n_batch;             // Batch size for prompt processing
            public uint n_threads;           // Threads for backend (0 = auto)
            public byte embeddings_only;     // Embeddings-only mode
        }

        /// <summary>
        /// Load a GGUF model.
        /// Thread-safety: Safe to call from multiple threads.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_model_load(ref AstralModelDesc desc, out AstralHandle out_model);

        /// <summary>
        /// Release a model.
        /// Thread-safety: Not thread-safe; must not be in use by any session.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void astral_model_release(AstralHandle model);

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralModelInfo
        {
            public uint vocab_size;
            public uint ctx_size;
            public int token_bos;
            public int token_eos;
        }

        // Mirrors native typedef: `typedef uint64_t AstralCaps;`
        public const ulong ASTRAL_CAP_NONE = 0;
        public const ulong ASTRAL_CAP_SAMPLER_EXT = 1UL << 0;
        public const ulong ASTRAL_CAP_STOP_SEQS = 1UL << 1;

        public const ulong ASTRAL_CAP_EMBEDDINGS = 1UL << 16;
        public const ulong ASTRAL_CAP_GPU_OFFLOAD = 1UL << 17;
        public const ulong ASTRAL_CAP_LORA = 1UL << 18;
        public const ulong ASTRAL_CAP_GRAMMAR = 1UL << 19;
        public const ulong ASTRAL_CAP_LOGPROBS = 1UL << 20;
        public const ulong ASTRAL_CAP_KV_STATE = 1UL << 21;
        public const ulong ASTRAL_CAP_SLOTS = 1UL << 22;
        public const ulong ASTRAL_CAP_GRAMMAR_GBNF = 1UL << 23;
        public const ulong ASTRAL_CAP_GRAMMAR_JSON_SCHEMA = 1UL << 24;

        [StructLayout(LayoutKind.Sequential)]
        public struct AstralModelLimits
        {
            public uint vocab_size;
            public uint ctx_size;
            public uint max_batch;
            public uint max_slots;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int astral_model_info(AstralHandle model, out AstralModelInfo out_info);
